# SolarMonitor

./: .gitignore  LICENSE  README.md
inverter_api/: Cargo.toml
inverter_api/src/: main.rs
solar_monitor/: README.md  pubspec.yaml
solar_monitor/android/app/: build.gradle.kts
solar_monitor/android/app/src/main/: AndroidManifest.xml
solar_monitor/android/app/src/main/kotlin/com/example/solar_monitor/: MainActivity.kt
solar_monitor/android/app/src/main/kotlin/com/example/solar_monitor_v2/: MainActivity.kt
solar_monitor/ios/Runner/: Info.plist
solar_monitor/ios/Runner.xcodeproj/: project.pbxproj
solar_monitor/lib/: main.dart
solar_monitor/lib/alt/: alt_dashboard.dart
solar_monitor/lib/extras/: router.dart  theme_provider.dart
solar_monitor/lib/pages/: dashboard_page.dart  detail_page.dart  graph_page.dart  settings_page.dart  tiles_page.dart
solar_monitor/linux/: CMakeLists.txt
solar_monitor/linux/runner/: my_application.cc
solar_monitor/macos/Runner.xcodeproj/: project.pbxproj
solar_monitor/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
solar_monitor/macos/Runner/Configs/: AppInfo.xcconfig
solar_monitor/web/: index.html  manifest.json
solar_monitor/windows/: CMakeLists.txt
solar_monitor/windows/runner/: Runner.rc  main.cpp
