[package]
name = "inverter_api_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.42"
crc16 = "0.4.0"
futures-util = "0.3.31"
hidapi = "2.6.4"
lazy_static = "1.5.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
